--- a/package.json
+++ b/package.json
@@ -4,21 +4,32 @@
   "description": "Chat Realtime con WebSockets, MongoDB y TypeScript",
   "main": "server/index.ts",
   "scripts": {
-    "start": "ts-node server/index.ts",
-    "dev": "nodemon --exec ts-node server/index.ts"
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "dev:server": "nodemon --exec ts-node server/index.ts",
+    "dev:client": "vite",
+    "build": "vite build",
+    "start:server": "ts-node server/index.ts",
+    "preview": "vite preview"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
-    "ws": "^8.16.0"
+    "ws": "^8.16.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@types/ws": "^8.5.10",
+    "@vitejs/plugin-react": "^4.2.1",
+    "concurrently": "^8.2.2",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vite": "^5.0.0"
   }
 }
