--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
+    "mongoose": "^7.6.0",
+    "cors": "^2.8.5",
     "ws": "^8.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -25,6 +27,8 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@types/ws": "^8.5.10",
+    "@types/cors": "^2.8.12",
+    "@types/mongoose": "^5.11.97",
     "@vitejs/plugin-react": "^4.2.1",
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.0",
