--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
     "mongoose": "^7.6.0",
-    "cors": "^2.8.5",
-    "ws": "^8.16.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@types/ws": "^8.5.10",
-    "@types/cors": "^2.8.12",
-    "@types/mongoose": "^5.11.97",
     "@vitejs/plugin-react": "^4.2.1",
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.0",
