Lista de usuarios (fix)
Se actualizo la lista de usuarios conectados en linea

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@
 MONGODB_URI=mongodb+srv://syncro:syncro_password@syncrocluster.9odabdc.mongodb.net/syncro_db
 MONGO_DB_NAME=syncro_db
 PORT=3000
+CLIENT_ORIGIN=http://localhost:5173
